// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render spinner with loading false 1`] = `
<DocumentFragment>
  .c0 {
  display: none;
  position: absolute;
  width: 40px;
  height: 40px;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  z-index: 99999;
}

.c1 {
  fill: transparent;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  stroke-width: 4;
  stroke-linecap: round;
  stroke-dasharray: 125.60000000000001;
  -webkit-transform-origin: 20px 20px 0px;
  -ms-transform-origin: 20px 20px 0px;
  transform-origin: 20px 20px 0px;
  -webkit-animation: kRGcnj 1s linear infinite;
  animation: kRGcnj 1s linear infinite;
  z-index: 99;
}

<svg
    class="c0"
  >
    <circle
      class="c1"
      cx="20"
      cy="20"
      r="18"
    />
  </svg>
</DocumentFragment>
`;

exports[`Render spinner with loading true 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  position: absolute;
  width: 40px;
  height: 40px;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  z-index: 99999;
}

.c1 {
  fill: transparent;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  stroke-width: 4;
  stroke-linecap: round;
  stroke-dasharray: 125.60000000000001;
  -webkit-transform-origin: 20px 20px 0px;
  -ms-transform-origin: 20px 20px 0px;
  transform-origin: 20px 20px 0px;
  -webkit-animation: kRGcnj 1s linear infinite;
  animation: kRGcnj 1s linear infinite;
  z-index: 99;
}

<svg
    class="c0"
  >
    <circle
      class="c1"
      cx="20"
      cy="20"
      r="18"
    />
  </svg>
</DocumentFragment>
`;
